--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </div>
 
         <div>
-            <iframe width="560" height="315" src="https://youtu.be/RujG_SVwFSY?si=mDxDWLZO27MKu-65"
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/RujG_SVwFSY?si=dteOTbuOAMjrYBK1"
                 title="YouTube video player" frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
                 referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
