--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </section>
 
     <section class="categoria">
-        <h2>Filmes e séries</h2>
+        <h2>Minecraft séries</h2>
         <div class="categoria-videos">
             <a href="https://www.youtube.com/watch?v=cs15QqG6Gjc">
                 <img src="https://img.youtube.com/vi/cs15QqG6Gjc/maxresdefault.jpg" />
