--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
     <section class="categoria">
         <h2>Minecraft séries</h2>
         <div class="categoria-videos">
-            <a href="https://www.youtube.com/watch?v=cs15QqG6Gjc">
+            <a href="https://<iframe width="560" height="315" src="https://www.youtube.com/embed/aWzKb071D9o?si=WnJe5KERWQzcJX1-" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                ">
                 <img src="https://img.youtube.com/vi/cs15QqG6Gjc/maxresdefault.jpg" />
             </a>
             <a href="https://www.youtube.com/watch?v=nCmIwcycUJ8">
