--- a/index.html
+++ b/index.html
@@ -11,12 +11,31 @@
 </head>
 
 <body>
-    <header>MINEFLIX</header>
+    <!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Página Verde Clarinho</title>
+    <style>
+        body {
+            background-color: 	#008000; /* Verde clarinho */
+            transition: background-color 0.5s;
+        }
+    </style>
+</head>
+<body>
+
+
+
+</body>
+</html>
+    <h2>DAVIFLIX</h2>
 
     <section class="chamada">
         <div class="chamada-texto">
             <h1>GRAFT GAMES</h1>
-            <p>#Minecraft</p>
+            <p>#Minecraft #REDSTONEGANG</p>
         </div>
 
         <div>
@@ -28,21 +47,18 @@
     <section class="categoria">
         <h2>Minecraft séries</h2>
         <div class="categoria-videos">
-            <a href="https://<iframe width="560" height="315" src="https://www.youtube.com/embed/aWzKb071D9o?si=WnJe5KERWQzcJX1-" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <a href="https://<iframe width="560" height="315" src="https://www.youtube.com/watch?v=aWzKb071D9o&list=PLD40851E0E52E9080&index=1
                 ">
-                <img src="https://img.youtube.com/vi/cs15QqG6Gjc/maxresdefault.jpg" />
+                <img src="https://i.ytimg.com/vi/aWzKb071D9o/hqdefault.jpg?sqp=-oaymwEbCKgBEF5IVfKriqkDDggBFQAAiEIYAXABwAEG&rs=AOn4CLBsnM1j9iVetOUfbku66R1h5meD-w" />
             </a>
-            <a href="https://www.youtube.com/watch?v=nCmIwcycUJ8">
-                <img src="https://img.youtube.com/vi/nCmIwcycUJ8/maxresdefault.jpg" />
+            <a href="https://www.youtube.com/watch?v=_GUB11JkxQs&list=PLnbRFDeFpOd9vt5BxnpjGIta-LFxDy1Z_">
+                <img src="https://i.ytimg.com/vi/_GUB11JkxQs/hqdefault.jpg?sqp=-oaymwEbCKgBEF5IVfKriqkDDggBFQAAiEIYAXABwAEG&rs=AOn4CLDLP6g7dXjGeiyITZ2ekIETM98Ksg" />
             </a>
-            <a href="https://www.youtube.com/watch?v=FvRmEapoHRc">
-                <img src="https://img.youtube.com/vi/FvRmEapoHRc/maxresdefault.jpg" />
+            <a href="https://www.youtube.com/watch?v=UIe17yLgAFU&list=PLX__f0eSr4yDxq5aOCHGKLayZWoMTCaUc">
+                <img src="https://i.ytimg.com/vi/UIe17yLgAFU/hqdefault.jpg?sqp=-oaymwEbCKgBEF5IVfKriqkDDggBFQAAiEIYAXABwAEG&rs=AOn4CLAfg-oH4QaBwoE_I47teX8dZebQ2Q" />
             </a>
-            <a href="https://www.youtube.com/watch?v=Ipkw_hWW-Hw">
-                <img src="https://img.youtube.com/vi/Ipkw_hWW-Hw/maxresdefault.jpg" />
-            </a>
-            <a href="https://www.youtube.com/watch?v=d4DzMNGoyis">
-                <img src="https://img.youtube.com/vi/d4DzMNGoyis/maxresdefault.jpg" />
+            <a href="https://www.youtube.com/watch?v=aau0GXcrlZ0&list=PLzdqXxKZOeh_x4uN5a5x5Q9QOKK7jwr_d">
+                <img src="https://i.ytimg.com/vi/aau0GXcrlZ0/hqdefault.jpg?sqp=-oaymwEbCKgBEF5IVfKriqkDDggBFQAAiEIYAXABwAEG&rs=AOn4CLDGP01dx8LY9xiqO2X9Qft8_Uqa8w" />
             </a>
         </div>
     </section>
