--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <title>Página Verde Clarinho</title>
     <style>
         body {
-            background-color: 	#008000; /* Verde clarinho */
+            background-color: 	#5A7DBD; /* Verde clarinho */
             transition: background-color 0.5s;
         }
     </style>
