--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Página Verde Clarinho</title>
+    <title>Página Preto </title>
     <style>
         body {
-            background-color: 	#0000; /* Verde clarinho */
+            background-color: 	#0000; /* Preto */
             transition: background-color 0.5s;
         }
     </style>
